--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+    "peerDependencies": {
+    "playwright-core": "^1.9.1"
+  },
   "devDependencies": {
     "@playwright/test": "^1.44.0",
     "@types/node": "^20.12.11",
