--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -23,5 +23,5 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: .
+          path: playwright-report/
           retention-days: 30
