--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-    "peerDependencies": {
-    "playwright-core": "^1.9.1"
-  },
   "devDependencies": {
     "@playwright/test": "^1.44.0",
     "@types/node": "^20.12.11",
     "dotenv": "^16.4.5",
     "prettier": "3.2.5"
+  },
+  "dependencies": {
+    "playwright-core": "^1.45.2"
   }
 }
