--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@types/node": "^20.12.11",
     "dotenv": "^16.4.5",
     "prettier": "3.2.5"
+  },
+  "dependencies": {
+    "playwright-core": "^1.45.2"
   }
 }
