--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,15 +13,15 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
-      #- name: Install dependencies
-      #  run: npm ci
+      - name: Install dependencies
+        run: npm ci
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
-        run:  docker-compose up --build
+        run: docker-compose up --build
       - uses: actions/upload-artifact@v4
         #if: always()
         #with:
-         # name: playwright-report
-         # path: playwright-report/
-         # retention-days: 30
+        # name: playwright-report
+        # path: playwright-report/
+        # retention-days: 30
