--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+#version: '3.8'
 services:
   playwright-test:
     image: playwright-test
@@ -7,5 +7,6 @@ services:
       dockerfile: ./Dockerfile
     command: npm run test:localization
     volumes:
-      - ./playwright-report/:/app/playwright-report
+      #- ./playwright-report/:/app/playwright-report
+      - .:/app/playwright-report
       - ./test-results/:/app/test-results
