--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,8 +20,9 @@ jobs:
       - name: Run Playwright tests
         run: docker-compose up --build
       - uses: actions/upload-artifact@v4
-        #if: always()
-        #with:
-        # name: playwright-report
-        # path: playwright-report/
-        # retention-days: 30
+        if: always()
+        with:
+         name: playwright-report
+         #path: playwright-report/
+         path: .
+         retention-days: 30
