--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [main, master]
 jobs:
-  test:
+  job1:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
@@ -22,9 +22,21 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-         name: playwright-report
-         #path: playwright-report/
-         path: .
-         retention-days: 30
-
-
+          name: playwright-report
+          #path: playwright-report/
+          path: .
+          retention-days: 30
+  job2:
+    runs-on: [ubuntu-latest]
+    steps:
+      - name: move to dir # Move the generated files into the root
+        uses: actions/checkout@v2
+          yes| cp -rf index.html .
+      - name: Commit files # commit the report
+        run: |
+          git config --local user.email "hristovatonika@gmail.com"
+          git config --local user.name "GitHub Action test"
+          git add .
+          git commit -m "Add report"
+          - name: Push changes # push the output folder to your repo
+          uses: ad-m/github-push-action@master
