--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,7 +9,7 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      #- uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
@@ -26,13 +26,8 @@ jobs:
           #path: playwright-report/
           path: .
           retention-days: 30
-  job2:
-    needs: job1
-    runs-on: [ubuntu-latest]
-    steps:
-      - name: move to dir # Move the generated files into the root
-        uses: actions/checkout@v2
-          yes| cp -rf index.html .
+      #- uses: actions/checkout@v4
+      #   yes| cp -rf index.html .
       - name: Commit files # commit the report
         run: |
           git config --local user.email "hristovatonika@gmail.com"
