--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -27,7 +27,8 @@ jobs:
           path: .
           retention-days: 30
       - uses: actions/checkout@v4
-      #   yes| cp -rf index.html .
+      - name: copy
+        run: cp -rf index.html .
       - name: Commit files # commit the report
         run: |
           git config --local user.email "hristovatonika@gmail.com"
