--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,11 +24,11 @@ jobs:
         with:
           name: playwright-report
           #path: playwright-report/
-          path: .
+          path: playwright-report/
           retention-days: 30
       - uses: actions/checkout@v4
       - name: copy
-        run: cp -rf index.html .
+        run: yes| cp -rf playwright-report/index.html .
       - name: Commit files # commit the report
         run: |
           git config --local user.email "hristovatonika@gmail.com"
