--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -36,4 +36,5 @@ jobs:
           git add .
           git commit -m "Add report"
           - name: Push changes # push the output folder to your repo
-          uses: ad-m/github-push-action@master
+          uses: ad-m/github-push-action@main
+          force: true
