--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -37,3 +37,5 @@ jobs:
           git commit -m "Add report"
       - name: Push changes # push the output folder to your repo
         uses: ad-m/github-push-action@master
+        with:
+          force: true
