--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -38,4 +38,5 @@ jobs:
       - name: Push changes # push the output folder to your repo
         uses: ad-m/github-push-action@master
         with:
+          github_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           force: true
