--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    command: npm run test:localization
+    command: npm run test:api-all #test:localization
     volumes:
       #- ./playwright-report/:/app/playwright-report
       - .:/app/playwright-report
