--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,7 +18,8 @@ jobs:
       #- name: Install Playwright Browsers
       #  run: npx playwright install --with-deps
       - name: Run Playwright tests
-        run: docker-compose up --build
+        run: docker-compose up --build &
+          docker wait $(docker ps -q) # Wait for the container to exit
       - uses: actions/upload-artifact@v4
         if: always()
         with:
