--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,9 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    command: npm run test:api-all #npm run test:api-all #test:localization
+    #command: npm run test:api-all #npm run test:api-all #test:localization
+    command: >
+      bash -c "npm run test:api-all && tail -f /dev/null"
     volumes:
       #- ./playwright-report/:/app/playwright-report
       - .:/app/playwright-report
