--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Run Playwright tests
         run: |
           docker-compose up --build -d
-      - name: Wait for containers to finish
-        run: |
-          timeout 10m sh -c 'until docker-compose logs --tail=1 | grep "Test run complete"; do sleep 10; done'
+      #- name: Wait for containers to finish
+      #  run: |
+      #    timeout 10m sh -c 'until docker-compose logs --tail=1 | grep "Test run complete"; do sleep 10; done'
       - uses: actions/upload-artifact@v4
         if: always()
         with:
