--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -44,3 +44,22 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git push --force
+  deploy:
+    runs-on: ubuntu-latest
+    needs: job1
+    steps:
+      - uses: actions/checkout@v4
+      - name: Deploy to GitHub Pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git pull origin main  # Ensure we have the latest changes
+          git checkout main
+          git fetch
+          git branch -D gh-pages  # Delete old gh-pages branch if exists
+          git checkout --orphan gh-pages
+          git reset --hard
+          cp index.html docs/index.html  # Copy your HTML report to docs folder
+          git add docs/index.html
+          git commit -m "Deploy HTML report to GitHub Pages"
+          git push -f origin gh-pages
