--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,9 +15,9 @@ jobs:
           node-version: lts/*
       - name: Install dependencies
         run: npm ci
-      #- name: Install Playwright Browsers
+      - name: Delete existing index.html file
+        run: rm -f index.html # Remove index.html if it exists
 
-      #  run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: |
           docker-compose up --build -d
