--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,6 +30,13 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+
+      - name: Download playwright-report artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: playwright-report
+          path: playwright-report
+
       - uses: actions/checkout@v4
       - name: Replace the report file with the newly generated one
         run: yes | cp -rf playwright-report/index.html .
