--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: playwright-report
-          path: playwright-report
+          path: playwright-report/
 
       - uses: actions/checkout@v4
       - name: Replace the report file with the newly generated one
